2006-05-09  Murray Cumming  <murrayc@murrayc.com>

	* libgda/gda-parameter-list.c: (gda_parameter_list_merge): Rename from 
	gda_parameter_list_merge_paramlist_params(), because this is what is in the 
	header, and gda_parameter_list_merge() would be  undefined otherwise. 
	I do wonder if this is meant to be a public function.

2006-05-09  Murray Cumming  <murrayc@murrayc.com>

	* libgda/gda-value.c: (gda_value_is_null), (gda_value_is_number),
	(gda_value_copy), (gda_value_get_binary), (gda_value_get_blob),
	(gda_value_get_geometric_point), (gda_value_get_list),
	(gda_value_get_numeric), (gda_value_get_short),
	(gda_value_get_ushort), (gda_value_get_time),
	(gda_value_get_timestamp), (gda_value_stringify),
	(gda_value_compare), (gda_value_compare_ext), (to_string),
	(gda_value_to_xml):
	* libgda/gda-value.h: Use the const keyword for input parameters 
	that will not be changed the function.

2006-05-08  Vivien Malerba <malerba@gnome-db.org>

	* libgda/gda-query.c: gda_query_execute(): show SQL if query if GDA_DEBUG is set
	* libgda/gda-query-target.c:
	* libgda/gda-query-field-field.c: surround rendered SQL with double quotes if necessary
	* libgda/gda-data-model-query.c: code cleanup

2006-05-08  Vivien Malerba <malerba@gnome-db.org>

	* Individual values are now strictly GValue, much of the GdaValue API has been removed.
	* libgda/graph/gda-graph-item.c: corrected a bug where locale was used in XML loading and
	saving.
	* doc/C/Makefile.am: avoid to override HTML_DIR, closes bug #329930
	* libgda/gda-server-provider-extra.c: applied patch from Chris Shoemaker, closing
	bug #337986
	* libgda/handlers/gda-handler-time.c: applied patch from Chris Shoemaker, closing
	bug #338081
	* applied patch from Thierry Moisan, closed bug #328418
	* libgda/gda-dict.h: removed GDA_DICT_PROPOSED_FILE from the error codes enum
	* libgda/gda-connection.[ch]: added domain and code error to returned errors,
	fixes bug #319948