@@ -1,3 +1,11 @@
+2006-05-10  Vivien Malerba <malerba@gnome-db.org>
+
+	* libgda/gda-dict-field.c: when a new data type is created, correctly sets its description
+	* testing/gda-author-dict-file.c: allow the specification of connection which is not a DSN
+	* libgda/gda-query-parsing.c: bug fixed
+	* libgda/gda-value.[ch]: added gda_value_take_binary()
+	* libgda/gda-value.c: bug fixes
+
 2006-05-09  Murray Cumming  <murrayc@murrayc.com>
 
 	* libgda/gda-parameter-list.c: (gda_parameter_list_merge): Rename from 
